OS11SPRYKE-1120 fix of displaying img on mobile device (#1392)

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/lazy-thumbnail/lazy-thumbnail.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/lazy-thumbnail/lazy-thumbnail.scss
@@ -42,7 +42,7 @@
 
         &__image {
             @include helper-breakpoint-media-max($sm-max) {
-                margin: 0px auto;
+                margin: -32px auto;
             }
 
 
